# Scraper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pyproject.toml  test_exa.py  test_fetch.py
.github/workflows/: deploy.yml
docs/: SOURCE_DEVELOPMENT_GUIDE.md  ctrip-api.md  dianping-api.md  douyin-api.md  google-api.md  iguopin-api.md  jd-api.md  jd-h5st-signing.md  jd-search-api.md  mp-weixin-api.md  reuters-api.md  scholar-api.md  serper-api.md  weibo-api.md  wsj-api.md  wsj-sso-api.md  x-api.md  x-tweet-detail-api.md  xiaohongshu-api.md  zhihu-api.md
docs/experience/: cdp-cookie-extraction.md  datadome-bypass.md  oauth-sso-scraping.md  patchright-tips.md  wsj-auto-login.md
scripts/: count_code.sh  export_reuters_state.js  wxauto_reply.py
tests/: __init__.py
tests/sources/ctrip/: test_config.py  test_cookies.py  test_flight_helpers.py  test_hotel_helpers.py
tests/sources/douyin/: test_video_helpers.py
tests/sources/sina/: test_search_parser.py
tests/sources/wsj/: test_cookies.py  test_credentials.py
web_scraper/: __init__.py  cli.py  mcp_server.py
web_scraper/converters/: __init__.py  markdown.py
web_scraper/core/: __init__.py  async_base.py  base.py  browser.py  captcha.py  captcha_vlm.py  config.py  cookies.py  display.py  exceptions.py  http_client.py  proxy.py  rate_limiter.py  storage.py  user_agent.py
web_scraper/sources/: __init__.py
web_scraper/sources/aigei/: __init__.py  cli.py  config.py  models.py
web_scraper/sources/ctrip/: __init__.py  auth.py  cli.py  config.py  cookies.py  models.py
(+154 files in other folders)
