[project]
name = "web-scraper"
version = "0.1.0"
description = "Unified web scraping framework with CLI and MCP server support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "markdownify>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "feedparser>=6.0.0",
    "lxml>=5.0.0",
    "requests (>=2.32.5,<3.0.0)",
    "curl-cffi (>=0.14.0,<0.15.0)",
]

[project.scripts]
scraper = "web_scraper.cli:app"
scraper-mcp = "web_scraper.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["web_scraper"]
